--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -1,4 +1,7 @@
 on init
+    # Disable vendor overlay
+    mount none /vendor/lost+found /vendor/overlay bind
+
     # Override vendor mixer_paths/gains
     mount none /system/etc/mixer_paths.xml /vendor/etc/mixer_paths.xml bind
     mount none /system/etc/mixer_gains.xml /vendor/etc/mixer_gains.xml bind
