--- a/rootdir/etc/init.samsungexynos9810.rc
+++ b/rootdir/etc/init.samsungexynos9810.rc
@@ -491,10 +491,12 @@ on boot
     chmod 0664 /dev/stune/foreground/schedtune.prefer_perf
     chmod 0664 /dev/stune/background/schedtune.prefer_perf
 
-    write /dev/stune/schedtune.boost 10
-    write /dev/stune/top-app/schedtune.boost 50
-    write /dev/stune/foreground/schedtune.boost 50
-    write /dev/stune/background/schedtune.boost 0
+    write /dev/stune/schedtune.boost 0
+    write /dev/stune/top-app/schedtune.boost 15
+    write /dev/stune/top-app/schedtune.prefer_idle 1
+    write /dev/stune/foreground/schedtune.boost 10
+    write /dev/stune/foreground/schedtune.prefer_idle 1
+    write /dev/stune/background/schedtune.boost -10
 
 # Permission and ownership for SEC PM
     # CPU dynamic hotplug
