star: boost I/O while booting
Change-Id: I2d98cf7771cb9b6fa66bf69578e410f29750aacd

--- a/rootdir/etc/init.samsungexynos9810.rc
+++ b/rootdir/etc/init.samsungexynos9810.rc
@@ -208,6 +208,11 @@ on init
 # DATA_INJECTION
     chown system radio /sys/class/sensors/ssp_sensor/data_injection_enable
 
+on late-fs
+    write /sys/block/sda/queue/iostats 0
+    write /sys/block/sda/queue/read_ahead_kb 2048
+    write /sys/block/sda/queue/nr_requests 256
+
 on post-fs-data
 # Log data folder
     mkdir /data/log 0771 radio system
@@ -769,3 +774,7 @@ on property:sys.boot_completed=1
     write /dev/stune/top-app/schedtune.prefer_idle 1
     write /dev/stune/foreground/schedtune.prefer_idle 1
     write /dev/stune/background/schedtune.boost -10
+
+    write /sys/block/sda/queue/iostats 1
+    write /sys/block/sda/queue/read_ahead_kb 256
+    write /sys/block/sda/queue/nr_requests 128
