universal9810: Disable samsung light hal
Change-Id: I0a3fbf0c10b6344459e4d0946da0065f13997519

--- a/lights/android.hardware.light@2.0-service.9810.rc
+++ b/lights/android.hardware.light@2.0-service.9810.rc
@@ -1,3 +1,6 @@
+service seh-light-hal-3-0 /system/bin/true
+    disabled
+
 service vendor.light-hal-2-0 /system/bin/hw/android.hardware.light@2.0-service.9810
     interface android.hardware.light@2.0::ILight default
     class hal
