--- a/lights/android.hardware.light@2.0-service.9810.rc
+++ b/lights/android.hardware.light@2.0-service.9810.rc
@@ -1,7 +1,4 @@
-service seh-light-hal-3-0 /system/bin/true
-    disabled
-
-service vendor.light-hal-2-0 /system/bin/hw/android.hardware.light@2.0-service.9810
+service seh-light-hal-3-0 /vendor/bin/hw/vendor.samsung.hardware.light@3.0-service
     interface android.hardware.light@2.0::ILight default
     class hal
     user system
