universal9810: Enable LPM and address denials
Change-Id: Ib425aa5b9391b8b7f04b005e80e6a16825d1deea

--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -4,3 +4,10 @@ on init
 
     # Set SunlightEnhancement sysnode owner
     chown system system /sys/class/mdnie/mdnie/lux
+
+# LPM
+service lpm /system/bin/lpm
+    class sec-charger
+    user root
+    group system radio input
+    critical
