universal9810: Kill argos-daemon + ExynosHWCServiceTW
Change-Id: I2d42cc94dac8f5b10f9c2c04f78bac1e3a09a8e0

--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -11,3 +11,9 @@ service lpm /system/bin/lpm
     user root
     group system radio input
     critical
+
+service argos-daemon /system/bin/true
+    disabled
+
+service ExynosHWCServiceTW /system/bin/true
+    disabled
