--- a/recovery/init.recovery.samsungexynos9810.rc
+++ b/recovery/init.recovery.samsungexynos9810.rc
@@ -2,6 +2,10 @@ on early-fs
     setprop sys.usb.configfs 1
     setprop sys.usb.controller 10c00000.dwc3
 
+on fs
+    wait /dev/block/platform/11120000.ufs
+    symlink /dev/block/platform/11120000.ufs /dev/block/bootdevice
+
 on post-fs
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "Conf 1"
     chmod 0444 /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration
