universal9810: Add lower case partition symlinks for recovery
* Some flashable zips relies on this, such as opengapps

Change-Id: Ib16444e53d3acfbd94c1163cda6fe7c234a639f4

--- a/recovery/init.recovery.samsungexynos9810.rc
+++ b/recovery/init.recovery.samsungexynos9810.rc
@@ -6,6 +6,11 @@ on fs
     wait /dev/block/platform/11120000.ufs
     symlink /dev/block/platform/11120000.ufs /dev/block/bootdevice
 
+    symlink /dev/block/bootdevice/by-name/BOOT /dev/block/bootdevice/by-name/boot
+    symlink /dev/block/bootdevice/by-name/SYSTEM /dev/block/bootdevice/by-name/system
+    symlink /dev/block/bootdevice/by-name/VENDOR /dev/block/bootdevice/by-name/vendor
+    symlink /dev/block/bootdevice/by-name/CACHE /dev/block/bootdevice/by-name/cache
+
 on post-fs
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "Conf 1"
     chmod 0444 /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration
