--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -23,19 +23,25 @@ on property:sys.boot_completed=1
     write /sys/block/sda/queue/nr_requests 128
 
 service argos-daemon /system/bin/true
+    oneshot
     disabled
 
 service ExynosHWCServiceTW /system/bin/true
+    oneshot
     disabled
 
 service proca /system/bin/true
+    oneshot
     disabled
 
 service secure_storage /system/bin/true
+    oneshot
     disabled
 
 service vaultkeeper /system/bin/true
+    oneshot
     disabled
 
 service sec_wsm_service /system/bin/true
+    oneshot
     disabled
