universal9810: vibrator: chown sysfs nodes
- allow vibration intensity to be controlled

Signed-off-by: Rob Burton <synt4x.93@gmail.com>
Change-Id: Iadc78321598b67d4bdace67dfc3f13f7c57a2dfd

--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -12,6 +12,10 @@ service lpm /system/bin/lpm
     group system radio input
     critical
 
+# Vibrator
+    chown system system /sys/class/timed_output/vibrator/enable
+    chown system system /sys/class/timed_output/vibrator/intensity
+
 on late-fs
     write /sys/block/sda/queue/iostats 0
     write /sys/block/sda/queue/read_ahead_kb 2048
