universal9810: vibrator: chown and set force_touch_intensity to 10000
- set to the same value as "high" in the stock rom

Signed-off-by: Rob Burton <synt4x.93@gmail.com>
Change-Id: I4d3efa0f0d208779e43bc44ea1b9d41aefaf901c

--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -15,6 +15,8 @@ service lpm /system/bin/lpm
 # Vibrator
     chown system system /sys/class/timed_output/vibrator/enable
     chown system system /sys/class/timed_output/vibrator/intensity
+    chown system system /sys/class/timed_output/vibrator/force_touch_intensity
+    write /sys/class/timed_output/vibrator/force_touch_intensity 10000
 
 on late-fs
     write /sys/block/sda/queue/iostats 0
