--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -18,12 +18,20 @@ on init
     chmod 0666 /sys/kernel/gpu/gpu_max_clock
     chmod 0666 /sys/kernel/gpu/gpu_min_clock
 
+on boot
+    # ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+
 # LPM
 service lpm /system/bin/lpm
     class sec-charger
     user root
     group system radio input
     critical
+
+on fs
+    swapon_all /system/etc/fstab.zram
 
 on late-fs
     write /sys/block/sda/queue/iostats 0
