universal9810: rootdir: fstab: import
Change-Id: I84c855aeeb722da41e36afff16ceb609886e5e05

--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -31,7 +31,7 @@ service lpm /system/bin/lpm
     critical
 
 on fs
-    swapon_all /system/etc/fstab.zram
+    swapon_all /vendor/etc/fstab.${ro.hardware}
 
 on late-fs
     write /sys/block/sda/queue/iostats 0
