--- a/recovery/init.recovery.samsungexynos9810.rc
+++ b/recovery/init.recovery.samsungexynos9810.rc
@@ -9,6 +9,7 @@ on fs
     symlink /dev/block/bootdevice/by-name/BOOT /dev/block/bootdevice/by-name/boot
     symlink /dev/block/bootdevice/by-name/SYSTEM /dev/block/bootdevice/by-name/system
     symlink /dev/block/bootdevice/by-name/VENDOR /dev/block/bootdevice/by-name/vendor
+    symlink /dev/block/bootdevice/by-name/USERDATA /dev/block/bootdevice/by-name/data
     symlink /dev/block/bootdevice/by-name/CACHE /dev/block/bootdevice/by-name/cache
 
 on post-fs
