--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -1,7 +1,6 @@
 on init
     # Disable vendor overlay
     mount none /vendor/lost+found /vendor/overlay bind
-    mount none /system/lib64/libperfmgr.so /vendor/lib64/libperfmgr.so bind
 
     # Set SunlightEnhancement sysnode owner
     chown system system /sys/class/mdnie/mdnie/lux
@@ -18,19 +17,18 @@ on init
     chmod 0666 /sys/kernel/gpu/gpu_max_clock
     chmod 0666 /sys/kernel/gpu/gpu_min_clock
 
-on boot
-    # ZRAM setup
-    write /sys/block/zram0/comp_algorithm lz4
-    write /proc/sys/vm/page-cluster 0
-
-# LPM
-service lpm /system/bin/lpm
+# Charger
+service charger /system/bin/charger
     class sec-charger
     user root
     group system radio input
+    capabilities SYS_BOOT
     critical
 
 on fs
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 100
     swapon_all /vendor/etc/fstab.${ro.hardware}
 
 on late-fs
