universal9810: hidl: fastcharge: build hal
Co-authored-by: Erfan Abdi <erfangplus@gmail.com>
Change-Id: If8967fe36d7a7e6a7361f0585f52d3e1e5564f4c

--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -17,6 +17,9 @@ on init
     chmod 0666 /sys/kernel/gpu/gpu_max_clock
     chmod 0666 /sys/kernel/gpu/gpu_min_clock
 
+    # FastCharge
+    chown system system /sys/class/sec/switch/afc_disable
+
 # Charger
 service charger /system/bin/charger
     class sec-charger
