--- a/rootdir/etc/init.samsung.rc
+++ b/rootdir/etc/init.samsung.rc
@@ -35,6 +35,12 @@ on late-fs
     write /sys/block/sda/queue/read_ahead_kb 2048
     write /sys/block/sda/queue/nr_requests 256
 
+on post-fs-data
+    chown system system /sys/class/power_supply/battery/batt_slate_mode
+    chown system system /sys/class/power_supply/battery/battery_charging_enabled
+    chown system system /sys/class/power_supply/battery/charging_enabled
+    chown system system /sys/class/power_supply/battery/input_suspend
+
 on property:sys.boot_completed=1
     write /sys/block/sda/queue/iostats 1
     write /sys/block/sda/queue/read_ahead_kb 256
